--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -19,6 +19,7 @@ COPY casc.yaml /var/jenkins_home/casc.yaml
 RUN jenkins-plugin-cli --plugins \
        "saferestart:latest configuration-as-code:latest" \
        "git:latest pipeline-model-definition:latest" \
-       "blueocean:latest docker-workflow:latest"
+       "blueocean:latest docker-workflow:latest" \
+       "matrix-auth:latest authorize-project:latest"
 
        # jenkins-plugin-cli --plugins "saferestart:latest configuration-as-code:latest git:latest pipeline-model-definition:latest docker-plugin:latest blueocean:latest"
